test/typechecker.d/invalid/ass4.souc.bad
n = 5

f(x: Integer): Integer = fndo
	b: Bool = True
	i = b
	return i
